[gd_scene load_steps=12 format=2]

[ext_resource path="res://coletavel.gd" type="Script" id=1]
[ext_resource path="res://Sonidox/coletavel.wav" type="AudioStream" id=2]

[sub_resource type="CylinderMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.223529, 0.929412, 0.235294, 1 )

[sub_resource type="CylinderShape" id=3]

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 1.009, 1, 1 )
gravity = Vector3( 0, 0, 0 )
radial_accel = 16.77
radial_accel_random = 0.07
scale = 1.1
scale_random = 0.08

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.909804, 0.760784, 0.0745098, 1 )

[sub_resource type="QuadMesh" id=6]
material = SubResource( 5 )
size = Vector2( 0.229, 0.241 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
gravity = Vector3( 0, 0, 0 )
linear_accel = 3.87
radial_accel = 11.61
radial_accel_random = 0.05
scale_random = 0.53

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.945098, 0.764706, 0.152941, 1 )

[sub_resource type="CubeMesh" id=9]
material = SubResource( 8 )
size = Vector3( 0.1, 0.125, 0.097 )

[node name="coletavel" type="Area"]
transform = Transform( 0.499742, -0.00971029, 0.00817155, 0.00872298, 0.566184, -0.0081728, -0.00857075, 0.0100538, 0.468148, 0, 0, 0 )
script = ExtResource( 1 )

[node name="kolekt" type="MeshInstance" parent="."]
transform = Transform( 0.346602, 0, 0, 0, 0.332671, 0, 0, 0, 0.3881, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.347, 0, 0, 0, 0.333, 0, 0, 0, 0.388, 0, 0, 0 )
shape = SubResource( 3 )

[node name="TempKol" type="Timer" parent="."]
wait_time = 3.0

[node name="Particles" type="Particles" parent="."]
visible = false
use_in_baked_light = true
emitting = false
amount = 50
lifetime = 3.0
explosiveness = 0.29
randomness = 0.12
fract_delta = false
visibility_aabb = AABB( -2.3742, -1.636, -2.47843, 4.7484, 3.27201, 4.95686 )
process_material = SubResource( 4 )
draw_pass_1 = SubResource( 6 )

[node name="Partik3d" type="Particles" parent="."]
pause_mode = 2
emitting = false
amount = 40
lifetime = 2.0
one_shot = true
explosiveness = 0.16
randomness = 0.23
process_material = SubResource( 7 )
draw_pass_1 = SubResource( 9 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_coletavel_body_entered"]
[connection signal="timeout" from="TempKol" to="." method="_on_TempKol_timeout"]
